[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "discord-py-interactions==5.13.2",
    "python-dotenv==1.0.1",
    "PyNaCl>=1.5.0",
    "flask>=3.1.1",
    "pyfiglet==1.0.2",
    "youtube-dl==2021.12.17",
    "aiohttp>=3.12.9",
    "py-cord==2.6.1",
]
